# ledger

./: .gitignore  Pipfile  migrations.py  pyproject.toml  setup.py
.github/workflows/: main.yaml
ledger/: __init__.py  __main__.py  categories.py  cli.py  client.py  csv.py  database.py  entities.py  log.py  output.py  queries.py  shell.py  sql.py  store.py  tables.py  utils.py  yml.py
ledger/io/: csv.py  sql.py  yml.py
ledger/parsers/: __init__.py  d1822.py  ingdiba.py  revolut.py
ledger/sql/: tables.sql
requirements/: main.in  main.txt  test.in  test.txt
src/ledger/: __init__.py  __main__.py  categories.py  client.py  database.py  output.py  queries.py
src/ledger/parsers/: d1822.py
test/: __init__.py  conftest.py  test_categories.py  test_client.py  test_database.py  test_queries.py  test_store.py  test_table.py  test_utils.py
test/data/: categories.yaml  tags.csv  transactions.csv
test/parsers/: __init__.py  ingdiba.csv  test_ingdiba.py
